Removed controversial comments. Fixed page overflow-y

--- a/server/flaskr/static/css/index.css
+++ b/server/flaskr/static/css/index.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Roboto',  sans-serif;
     background: #f2f2f2;
+    overflow-x: hidden;
 }
 
 nav a,
